crates/cheers/tests/ui/js_script_new_rejects_string.stderr
error[E0308]: mismatched types
 --> tests/ui/js_script_new_rejects_string.rs:4:27
  |
4 |     let _ = JsScript::new("console.log('not executed')");
  |             ------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Lazy<_, ScriptSource>`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
  = note: expected struct `cheers::prelude::Lazy<_, ScriptSource>`
          found reference `&'static str`
note: associated function defined here
 --> src/events/js_script.rs
  |
  |     pub fn new<F>(script: Lazy<F, ScriptSource>) -> Self
  |            ^^^
