crates/cheers/tests/ui/js_script_new_rejects_string.rs
use cheers::prelude::*;

fn main() {
    let _ = JsScript::new("console.log('not executed')");
}
